# aint-class

./: .gitignore  CMakeLists.txt  README.md  run-cmake.sh
CMakeModules/: FindCppUnit.cmake  Toolchain-i686-w64-mingw32.cmake  Toolchain-x86_64-w64-mingw32.cmake
aint/: CMakeLists.txt  aint_ctor.cxx  aint_dtor.cxx  aint_export_darwin.txt  aint_export_linux.txt  aint_export_mingw.def  aint_member.cxx  aint_operator.cxx  aint_operator_assignment.cxx  aint_operator_compound_assignment.cxx  aint_operator_compound_assignment_divide.cxx  aint_operator_compound_assignment_minus.cxx  aint_operator_compound_assignment_modulo.cxx  aint_operator_compound_assignment_plus.cxx  aint_operator_compound_assignment_times.cxx  aint_operator_decrement.cxx  aint_operator_divide.cxx  aint_operator_equal.cxx  aint_operator_greater.cxx  aint_operator_greater_equal.cxx  aint_operator_increment.cxx  aint_operator_less.cxx  aint_operator_less_equal.cxx  aint_operator_minus.cxx  aint_operator_modulo.cxx  aint_operator_not_equal.cxx  aint_operator_plus.cxx  aint_operator_stream.cxx  aint_operator_times.cxx
aint/calc/: CMakeLists.txt  aint-calc.cxx
aint/calc/cppunit/: CMakeLists.txt  cppunit_calc.cxx
aint/calc/cppunit/generate/: gen-rand-2.py
aint/calc/include/: aint_calc.hxx
aint/cppunit/: CMakeLists.txt  cppunit.cxx  cppunit_calc.cxx  cppunit_ctor.cxx  cppunit_fibonacci.cxx  cppunit_member.cxx  cppunit_operator_compound_assignment.cxx  cppunit_operator_compound_assignment_divide.cxx  cppunit_operator_compound_assignment_minus.cxx  cppunit_operator_compound_assignment_modulo.cxx  cppunit_operator_compound_assignment_plus.cxx  cppunit_operator_compound_assignment_times.cxx  cppunit_operator_decrement.cxx  cppunit_operator_divide.cxx  cppunit_operator_equal.cxx  cppunit_operator_greater.cxx  cppunit_operator_greater_equal.cxx  cppunit_operator_increment.cxx  cppunit_operator_less.cxx  cppunit_operator_less_equal.cxx  cppunit_operator_minus.cxx  cppunit_operator_modulo.cxx  cppunit_operator_not_equal.cxx  cppunit_operator_plus.cxx  cppunit_operator_times.cxx
aint/cppunit/dummy/: cppunit_calc.cxx
aint/cppunit/generate/: gen-div-test.sh  gen-mod-test.sh  gen-rand-1.py
aint/cppunit/include/: cppunit.hxx
aint/example/: CMakeLists.txt  build.sh  example.cxx  fibonacci.cxx
aint/impl/: impl.cxx  impl_ctor.cxx  impl_dtor.cxx  impl_member.cxx  impl_operator.cxx  impl_operator_divide.cxx  impl_operator_equal.cxx  impl_operator_less.cxx  impl_operator_plus.cxx  impl_operator_times.cxx
aint/impl/include/: impl.hxx
aint/include/: aint.hxx
cmake/: FindCppUnit.cmake  Toolchain-i686-w64-mingw32.cmake  gen_def_file.cmake
doxygen/: Doxyfile.txt  title-page.dox
